--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -108,14 +108,17 @@
 			<br>
 			<ul>
 				<li><strike>Enhanced <a href="/profile">profile page</a></strike></li>
-				<li>Let users delete their messages</li>
+				<li>Let users delete their messages (on the way)</li>
 				<li><strike>Better <a href="#mdc-modal">Markdown</a> support</strike></li>
+				<li>Settings panel</li>
+				<li>emoji support as <a href="https://github.com/christian-fei/opentalk.me/issues/4">requested</a></li>
 				<li>Code highlighting?</li>
 				<li>Implement notification system logic</li>
 				<li><strike>Tagging of chatrooms</strike></li>
 				<li><strike>Search for interesting chatroom based on tags</strike></li>
 				<li><strike>Global stats</strike></li>
-				<li>@username reply</li>
+				<li><strike>@username reply</strike></li>
+				<li><strike>fix security issues</strike></li>
 			</ul>
 			<br>
 			Do you want to contribute or have a suggestion to make this better?	<a href="https://github.com/christian-fei/opentalk.me">Fork away!</a>
